--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.1.4",
+    "@types/passport-jwt": "^3.0.3",
     "@types/uuid": "^8.3.0",
     "bcrypt": "^5.0.0",
     "class-transformer": "^0.3.1",
