--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "NODE_ENV=production node dist/main",
+    "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -28,9 +28,12 @@
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.1.4",
+    "@nestjs/cli": "^7.0.0",
+    "@types/express": "^4.17.3",
+    "@types/node": "^13.9.1",
     "@types/passport-jwt": "^3.0.3",
     "@types/uuid": "^8.3.0",
-    "bcrypt": "^5.0.0",
+    "bcrypt-nodejs": "0.0.3",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "config": "^3.3.2",
@@ -40,14 +43,11 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
-    "typeorm": "^0.2.28",
-    "@types/express": "^4.17.3",
-    "@types/node": "^13.9.1",
     "ts-node": "9.0.0",
+    "typeorm": "^0.2.28",
     "typescript": "^3.7.4"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
     "@types/jest": "26.0.10",
@@ -64,6 +64,7 @@
     "ts-loader": "^6.2.1",
     "tsconfig-paths": "^3.9.0"
   },
+  "engines": { "node" : "12.18.3" },
   "jest": {
     "moduleFileExtensions": [
       "js",
