--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/cli": "^7.0.0",
     "@nestjs/common": "^7.0.0",
     "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.0.0",
@@ -28,12 +29,12 @@
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.1.4",
-    "@nestjs/cli": "^7.0.0",
     "@types/express": "^4.17.3",
     "@types/node": "^13.9.1",
     "@types/passport-jwt": "^3.0.3",
     "@types/uuid": "^8.3.0",
     "bcrypt-nodejs": "0.0.3",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "config": "^3.3.2",
@@ -64,7 +65,9 @@
     "ts-loader": "^6.2.1",
     "tsconfig-paths": "^3.9.0"
   },
-  "engines": { "node" : "12.18.3" },
+  "engines": {
+    "node": "12.18.3"
+  },
   "jest": {
     "moduleFileExtensions": [
       "js",
